# chat-realtime-cpp

./: .gitignore  CMakeLists.txt  README.md  docs.md
client/: CMakeLists.txt  auth_service_connector.cpp  auth_service_connector.hpp  client.cpp
client/GUI/: auth_panel.cpp  auth_panel.hpp  imgui_manager.cpp  imgui_manager.hpp
database/: rooms.csv  users.csv
docs/: docs.md
protos/: auth_service.proto  hello_world.proto  server_service.proto
server/: CMakeLists.txt  constants.hpp  server.cpp
server/services/: auth_service_impl.cpp  auth_service_impl.hpp
src/: common.hpp
src/client/: CMakeLists.txt  auth_service_connector.cpp  auth_service_connector.hpp  chat_service_connector.cpp  chat_service_connector.hpp  client.cpp  globals.cpp  globals.hpp  rooms_service_connector.cpp  rooms_service_connector.hpp
src/client/gui/: auth_panel.cpp  auth_panel.hpp  chat_panel.cpp  chat_panel.hpp  header_panel.cpp  header_panel.hpp  imgui_manager.cpp  imgui_manager.hpp  rooms_panel.cpp  rooms_panel.hpp  users_panel.cpp  users_panel.hpp
src/protos/: CMakeLists.txt  auth_service.proto  chat_service.proto  rooms_service.proto
src/server/: CMakeLists.txt  server.cpp
src/server/services/: auth_service_impl.cpp  auth_service_impl.hpp  chat_service_impl.cpp  chat_service_impl.hpp  rooms_service_impl.cpp  rooms_service_impl.hpp
